--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "manifest-revision-webpack-plugin",
-  "version": "0.5.0",
+  "name": "@gusto/manifest-revision-webpack-plugin",
+  "version": "0.5.1",
   "description": "Create a slimmed down manifest of your chunks and assets so that you can cache all of your assets.",
   "main": "index.js",
   "scripts": {
